--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bufferutil": "^4.0.1",
-    "core-js": "^3.6.4",
-    "echarts": "^4.7.0",
-    "element-ui": "^2.13.1",
-    "socket.io-client": "^2.3.0",
-    "utf-8-validate": "^5.0.2",
+    "bufferutil": "^4.0.2",
+    "core-js": "^3.8.0",
+    "echarts": "^5.0.0",
+    "element-ui": "^2.14.1",
+    "socket.io-client": "^3.0.3",
+    "utf-8-validate": "^5.0.3",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-jsonp": "^0.1.8",
@@ -29,11 +29,11 @@
     "@vue/cli-plugin-unit-mocha": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
-    "@vue/test-utils": "1.0.0-beta.31",
+    "@vue/test-utils": "1.1.1",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.1.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "chai": "^4.2.0",
+    "eslint": "^7.14.0",
+    "eslint-plugin-vue": "^7.1.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
